Step 2: 80% completed. Step 3: 60% completed.
