# ow-interactive/app/Models/Transaction.php
@@ -1,0 +1,45 @@
+<?php
+
+namespace App\Models;
+
+use Carbon\Carbon;
+use Illuminate\Database\Eloquent\Builder;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
+
+/**
+ * @OA\Schema(
+ *     title="Transaction",
+ *     description="Transaction Model",
+ * )
+ */
+class Transaction extends Model
+{
+    /**
+     * The attributes that are mass assignable.
+     *
+     * @var array
+     */
+    protected $fillable = [
+        'user_id',
+        'transaction_type_id',
+        'value'
+    ];
+
+
+    /**
+     * @return BelongsTo
+     */
+    public function user()
+    {
+        return $this->belongsTo(User::class);
+    }
+
+    /**
+     * @return BelongsTo
+     */
+    public function transactionType()
+    {
+        return $this->belongsTo(TransactionType::class, 'transaction_type_id', 'id');
+    }
+}
